# mimir

./: README.md  pyproject.toml
mimir/: __init__.py  config.py
mimir/models/: __init__.py  article.py  attachment.py
mimir/routes/main/: __init__.py  load_data.py
poc/: test01.py
